# spiir

./: README.md
gstlal-spiir/: .clang-format  configure.ac
gstlal-spiir/gnuscripts/: cudalt.py
gstlal-spiir/gst/: Makefile.am
gstlal-spiir/gst/cuda/: cuda_debug.h  cuda_plugin.c
gstlal-spiir/gst/cuda/cohfar/: background_stats.h  background_stats_utils.c  background_stats_utils.h  cohfar_accumbackground.c  cohfar_accumbackground.h  cohfar_assignfar.c  cohfar_assignfar.h  cohfar_calc_fap.c  knn_kde.c  knn_kde.h  ssvkernel.c  ssvkernel.h  test_knn_pipeline.c
gstlal-spiir/gst/cuda/multiratespiir/: multiratespiir.c  multiratespiir.h  multiratespiir_kernel.cu  multiratespiir_kernel.h  multiratespiir_utils.c  multiratespiir_utils.h
gstlal-spiir/gst/lal/: Makefile.am  gstlalspiir.c
gstlal-spiir/gst/lal/triggerjointer/: triggerjointer.c  triggerjointer.h
gstlal-spiir/gst/lal/triggerjointer/test/: find_timedelay.py
gstlal-spiir/include/: pipe_macro.h  postcohtable.h
gstlal-spiir/lib/LIGOLw_xmllib/: LIGOLwReader.c  LIGOLwUtils.c  LIGOLwWriter.c
gstlal-spiir/lib/include/: LIGOLwHeader.h
gstlal-spiir/python/pipemodules/: __init__.py  homomorphic.py  pipe_macro.py  postcoh_finalsink.py  snglrate_datasource.py  spiirparts.py  stats.py
gstlal-spiir/python/spiirbank/: _spiir_decomp.c  cbc_template_iir.py  optimizer.py  spiir_decomp.py  spiir_utils.py
gstlal-spiir/python/workflow/: dbtables_postcoh.py  ligolw_inspinjfind_postcoh.py  ligolw_sqlite_postcoh.py  lvalert_helper.py  utils.py  webpage.py
gstlal/gst/lal/: gstlal_simulation.c
(+27 files in other folders)
